test/types/enum/paramCompareDiffEnums.good
paramCompareDiffEnums.chpl:13: error: It works!
